--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX22">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFx22">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
